--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ class="hide-mobile">BUSD</span></a></li>
 alt="Telegram" class="social-icons" src="images/usdc.png"><span
 class="hide-mobile">USDC</span></a></li>
 										<li><a class="social-pad"
-													href=""
+													href="https://bscscan.com/address/0x4fde8abc04a865dd5ff22b3ba27e050d1ddbeda6#code"
 													target="_blank"><img alt="BscScan Logo" class="social-icons" src="images/bscan_logo.png"><span
 													class="hide-mobile">Contract</span></a></li>
 											</ul>
@@ -244,7 +244,7 @@ class="hide-mobile">USDC</span></a></li>
                   alt="Telegram" class="social-icons" src="images/usdc.png"><span
                      class="hide-mobile">USDC</span></a></li>
 
-										<li><a class="social-pad"	href=""
+										<li><a class="social-pad"	href="https://bscscan.com/address/0x4fde8abc04a865dd5ff22b3ba27e050d1ddbeda6#code"
 													target="_blank"><img alt="BscScan Logo" class="social-icons" src="images/bscan_logo.png"><span
 													class="hide-mobile">Contract</span></a></li>
 											</ul>
